@@ -151,7 +151,7 @@ if (test "x$no_glut" = "xyes"); then
   AC_MSG_WARN([The GLUT library could not be found : example programs and some tests will not be built])
 else
   EXAMPLES="examples"
-  TESTS_WITH_GLUT="test7 test8 test9.1 test9.2 test9.3 test9.4 test9.5 test9.6 test9.7 test9.8 testrender"
+  TESTS_WITH_GLUT="test7 test8 test9.1 test9.2 test9.3 test9.4 test9.5 test9.6 test9.7 test9.8 test10 testrender"
 fi
 
 
