@@ -3,6 +3,8 @@ Changes made from the "0.6" release to the "0.7" release:
 
 * Bertrand Coconnier:
 
+- Fixed bug #1820546 (glcRenderString("") displayed the last rendered string
+  minus its first character)
 - Fixed a bug where blank characters (i.e. spaces) were wrongly transformed into
   null characters.
 - Removed the use of FcStrSet and FcStrList objects for the catalog list. Use
